--- a/index.html
+++ b/index.html
@@ -409,5 +409,16 @@
 
         </footer>
 
+        <div class="backdrop is-hidden">
+            <div class="modal">
+                <button class="close-btn">
+                    <svg class="close-icon" width="" height="">
+                        <use href="./images/icons.svg#modal-close-btn"></use>
+                    </svg>
+                </button>
+            </div>
+        </div>
+
+        <script src="./js/modal.js"></script>
     </body>
 </html>
