--- a/portfolio.html
+++ b/portfolio.html
@@ -69,14 +69,20 @@
 
                     <ul class="projects list">
                         <li class="project">
-                            <a href="" class="link">
-                                <img src="./images/img-1.jpg" alt="МакБук" width="370" height="294">
-                                <div class="project-content">
-                                    <h2 class="project-name">Технокряк</h2>
-                                    <p class="project-type">Веб-сайт</p>
-                                </div>
-                            </a>
+                                <a href="" class="link">
+                                    <div class="project-thumb">
+                                        <img src="./images/img-1.jpg" alt="МакБук" width="370" height="294">
+                                        <!-- <p class="project-description">Технокряк это современная площадка распространения коровируса. Компании используют эту
+                                            платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p> -->
+                                    </div>
+
+                                    <div class="project-content">
+                                        <h2 class="project-name">Технокряк</h2>
+                                        <p class="project-type">Веб-сайт</p>
+                                    </div>
+                                </a>
                         </li>
+                        
                         <li class="project">
                             <a href="" class="link">
                                 <img src="./images/img-2.jpg" alt="Игра в баскетбол" width="370" height="294">
