--- a/portfolio.html
+++ b/portfolio.html
@@ -69,41 +69,78 @@
 
                     <ul class="projects list">
                         <li class="project">
-                                <a href="" class="link">
-                                    <div class="project-thumb">
-                                        <img src="./images/img-1.jpg" alt="МакБук" width="370" height="294">
-                                        <!-- <p class="project-description">Технокряк это современная площадка распространения коровируса. Компании используют эту
-                                            платформу для цифрового шпионажа и атак на защищенные сервера конкурентов.</p> -->
-                                    </div>
+                            <a href="" class="link">
+                                <div class="project-thumb">
+                                    <img src="./images/img-1.jpg" alt="МакБук" width="370" height="294">
 
-                                    <div class="project-content">
-                                        <h2 class="project-name">Технокряк</h2>
-                                        <p class="project-type">Веб-сайт</p>
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
                                     </div>
-                                </a>
+                                </div>  
+                                
+                                <div class="project-content">
+                                    <h2 class="project-name">Технокряк</h2>
+                                    <p class="project-type">Веб-сайт</p>
+                                </div>
+                            </a>
                         </li>
                         
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-2.jpg" alt="Игра в баскетбол" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-2.jpg" alt="Игра в баскетбол" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Постер New Orlean vs Golden Star</h2>
                                     <p class="project-type">Дизайн</p>
                                 </div>
                             </a>
                         </li>
+
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-3.jpg" alt="Логотип ресторана" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-3.jpg" alt="Логотип ресторана" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Ресторан Seafood</h2>
                                     <p class="project-type">Приложение</p>
                                 </div>
                             </a>
                         </li>
+
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-4.jpg" alt="Черные нушники" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-4.jpg" alt="Черные нушники" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Проект Prime</h2>
                                     <p class="project-type">Маркетинг</p>
@@ -112,7 +149,17 @@
                         </li>
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-5.jpg" alt="Две коробки" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-5.jpg" alt="Две коробки" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Проект Boxes</h2>
                                     <p class="project-type">Приложение</p>
@@ -121,7 +168,17 @@
                         </li>
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-6.jpg" alt="АйМак" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-6.jpg" alt="АйМак" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Inspiration has no Borders</h2>
                                     <p class="project-type">Веб-сайт</p>
@@ -130,7 +187,17 @@
                         </li>
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-7.jpg" alt="Книга" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-7.jpg" alt="Книга" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Издание Limited Edition</h2>
                                     <p class="project-type">Дизайн</p>
@@ -139,7 +206,17 @@
                         </li>
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-8.jpg" alt="Ярлык" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-8.jpg" alt="Ярлык" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Проект LAB</h2>
                                     <p class="project-type">Маркетинг</p>
@@ -148,7 +225,17 @@
                         </li>
                         <li class="project">
                             <a href="" class="link">
-                                <img src="./images/img-9.jpg" alt="Работа за ноутбуком" width="370" height="294">
+                                <div class="project-thumb">
+                                    <img src="./images/img-9.jpg" alt="Работа за ноутбуком" width="370" height="294">
+
+                                    <div class="project-description">
+                                        <p class="description">
+                                            Технокряк это современная площадка распространения коровируса. Компании используют эту платформу для цифрового
+                                            шпионажа и атак на защищенные сервера конкурентов.
+                                        </p>
+                                    </div>
+                                </div>
+
                                 <div class="project-content">
                                     <h2 class="project-name">Growing Business</h2>
                                     <p class="project-type">Приложение</p>
